made more responsive

--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Foodie Hub - Menu</title>
 </head>
 
@@ -322,7 +322,6 @@
             </a>
             <a href="#" class="text-warning fs-4" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
           </div>
-
 
         </div>
 
